Update to config as Staff was redirected to login every time they processed an order.